...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_bike" />


    <Button
        android:id="@+id/btnExit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:drawableBottom="@drawable/ic_exit"
        android:gravity="center"
        android:textSize="12sp"
...
